<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutStyle"
    android:orientation="vertical">

    <!--list of countries -->
    <TextView
        android:id="@+id/LabelSelectCountry"
        android:text="@string/select_country"
        android:layout_marginTop="10dp"
        style="@style/TextviewLayout"/>

    <Spinner
        android:id="@+id/CreateApptCountries"
        style="@style/MySpinner"/>

    <!--list of locations -->
    <TextView
        android:id="@+id/LabelSelectLocation"
        android:text="@string/select_location"
        style="@style/TextviewLayout"/>

    <Spinner
        android:id="@+id/CreateApptLocations"
        style="@style/MySpinner"/>

    <!--list of specialties-->
    <TextView
        android:id="@+id/LabelSelectSpecialty"
        android:text="@string/select_specialty"
        style="@style/TextviewLayout"/>

    <Spinner
        android:id="@+id/CreateApptSpecialty"
        style="@style/MySpinner"/>

    <!-- list of services -->
    <TextView
        android:id="@+id/LabelSelectService"
        android:text="@string/select_service"
        style="@style/TextviewLayout"/>

    <Spinner
        android:id="@+id/CreateApptServices"
        style="@style/MySpinner"/>

    <!--list of doctors -->
    <TextView
        android:id="@+id/LabelSelectDoctor"
        android:text="@string/select_doctor"
        style="@style/TextviewLayout"/>

    <Spinner
        android:id="@+id/CreateApptDoctors"
        style="@style/MySpinner"/>

    <!-- Time -->
    <TextView
        android:id="@+id/LabelAppointmentTime"
        android:text="@string/select_time"
        style="@style/TextviewLayout"/>

    <Spinner
        android:id="@+id/CreateApptTimeSpinner"
        style="@style/MySpinner"/>

    <!-- Date -->
    <TextView
        android:id="@+id/LabelChooseDate"
        android:text="@string/select_date"
        style="@style/TextviewLayout"/>

    <DatePicker
        android:id="@+id/CreateApptDatePicker"
        style="@style/DatepickerLayout"/>

    <!-- Buttons -->
    <Button
        android:id="@+id/ConfirmCreateAppt"
        android:text="@string/create_appointment"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/CancelCreateAppt"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        style="@style/ButtonStyle"/>

    </LinearLayout>

</ScrollView>

